<resources>
    <string name="app_name">FoodXDonatur</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>

    <string name="MAP_API_KEY">AIzaSyAtkENu4SmTIvSm-14loUHq6DbzBDPSu3A</string>

    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="please_sign_in_to_continue">Please, sign in to continue</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="register">Register</string>
    <string name="alamat">Alamat</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="sign_out">Sign out</string>
    <string name="form_donasi">Form Donasi</string>
    <string name="pernyataan_donasi">Dengan ini saya menyatakan bahwa data yang saya isi di atas adalah benar</string>
    <string name="submit">Submit</string>
    <string name="image_saved">Image saved</string>
    <string name="fail">Gagal</string>
    <string name="gps_warning" translatable="false">Tekan OK untuk menyalakan GPS</string>
    <string name="gps_title" translatable="false">GPS Tidak Aktif!</string>

    <string-array name="jenis_kelamin">
        <item>Perempuan</item>
        <item>Laki-laki</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
