<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/sign_up_here"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/full_name"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegister" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_FullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="Full name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFullName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtEmailRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/e_mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_FullName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="E-mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtEmailRegister">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtPasswordRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_Email" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPasswordRegister">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtPhoneNumberRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Phone Number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_Password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_PhoneNum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumberRegister">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ex:0812345678" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtJenKelRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_PhoneNum" />

        <Spinner
            android:id="@+id/spinnerJenKelRegister"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtJenKelRegister" />


        <TextView
            android:id="@+id/txtAddressDonaturRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerJenKelRegister" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAddressDonaturRegister">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ex: Jalan Melawai No. 1, Kebayoran Baru " />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_Address" />

        <TextView
            android:id="@+id/txtHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="24dp"
            android:text="@string/already_have_an_account"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

        <TextView
            android:id="@+id/txtSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Sign in"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtHaveAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toEndOf="@+id/txtHaveAccount"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>