<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.account.AccountFragment"
    android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtNL"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="104dp"
            android:text="@string/nama_lengkap"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNamaLengkap"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/nama_lengkap"
            android:textColor="@color/black"


            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtNL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtNL"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtEm"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="E-mail"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNL" />

        <TextView
            android:id="@+id/txtEmailUser"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="24dp"
            android:text="yourmail@email.com"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtEm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtEm" />

        <TextView
            android:id="@+id/txtNH"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Nomor HP"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEm" />

        <TextView
            android:id="@+id/txtNoHp"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="24dp"
            android:text="08123456789"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtNH"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEm"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtAddr"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/alamat"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNH" />

        <TextView
            android:id="@+id/txtAlamat"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="Jalan Melawai no.1, Kebayoran Baru"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNoHp" />

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>