<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".donasi.DonasiActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtFormDonasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/form_donasi"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNamaMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama makanan"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFormDonasi" />

        <Spinner
            android:id="@+id/spinnerNamaMakanan"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNamaMakanan" />

        <TextView
            android:id="@+id/txtPorsiMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Porsi"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerNamaMakanan" />


        <EditText
            android:id="@+id/editTextPorsi"
            android:layout_width="72dp"
            android:layout_height="52dp"
            android:layout_marginTop="4dp"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPorsiMakanan" />

        <Spinner
            android:id="@+id/spinnerUnitPorsi"
            android:layout_width="72dp"
            android:layout_height="52dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPorsi"
            app:layout_constraintStart_toEndOf="@+id/editTextPorsi"
            tools:layout_editor_absoluteX="72dp" />

        <TextView
            android:id="@+id/txtTglProduksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Tanggal produksi"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerUnitPorsi" />

        <EditText
            android:id="@+id/editTglProduksi"
            android:layout_width="156dp"
            android:layout_height="52dp"
            android:layout_marginTop="4dp"
            android:inputType="date"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTglProduksi" />

        <TextView
            android:id="@+id/txtTglKadaluwarsa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Tanggal kadaluarsa"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTglProduksi" />

        <EditText
            android:id="@+id/editTglKadaluwarsa"
            android:layout_width="156dp"
            android:layout_height="52dp"
            android:layout_marginTop="4dp"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTglKadaluwarsa" />

        <TextView
            android:id="@+id/txtKondisiMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Kondisi makanan"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTglKadaluwarsa" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbTidakBerwarna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Tidak terjadi perubahan warna"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtKondisiMakanan" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbTidakBertekstur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Tidak terjadi perubahan tekstur"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbTidakBerwarna" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbTidakBerasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Tidak terjadi perubahan rasa"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbTidakBertekstur" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbTidakBerbau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Tidak berbau"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbTidakBerasa" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbTidakBerlendir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Tidak berlendir"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbTidakBerbau" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbTidakBerjamur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Tidak berjamur"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbTidakBerlendir" />

        <TextView
            android:id="@+id/txtFotoMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Foto makanan"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbTidakBerjamur" />

        <Button
            android:id="@+id/buttonChooseFile"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="Choose file"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFotoMakanan" />

        <TextView
            android:id="@+id/txtNamaFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama file"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonChooseFile"
            app:layout_constraintTop_toTopOf="@id/buttonChooseFile"
            app:layout_constraintStart_toEndOf="@+id/buttonChooseFile" />

        <TextView
            android:id="@+id/txtWaktuJemput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Waktu penjemputan"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonChooseFile" />

        <EditText
            android:id="@+id/editWaktuJemput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWaktuJemput" />

        <TextView
            android:id="@+id/txtLokasiJemput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Lokasi penjemputan"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editWaktuJemput" />

        <EditText
            android:id="@+id/editLokasiJemput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLokasiJemput" />

        <TextView
            android:id="@+id/txtNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Notes"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLokasiJemput" />

        <EditText
            android:id="@+id/editNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNotes" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbPernyataan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pernyataan_donasi"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editNotes" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbPernyataan" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>